# pyo3-missing-builtin-modules-repro

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: repro.yml
crates/repro/: Cargo.toml
crates/repro/src/: lib.rs
crates/repro_core/: Cargo.toml
crates/repro_core/src/: lib.rs  main.rs
crates/repro_profile/: Cargo.toml
crates/repro_profile/src/: main.rs
python/repro/: __init__.py
