[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "repro"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["pytest"]

[tool.maturin]
manifest-path = "crates/repro/Cargo.toml"
module-name = "repro._repro"
python-source = "python"
features = ["pyo3/extension-module"]

[project.scripts]
repro = "repro._repro:repro_run"
